logs/error.log
[CLI] Failed to get sessions: Command failed: openclaw sessions list --active-minutes 2 --json 2>/dev/null
[CLI] Failed to get sessions: Command failed: openclaw sessions list --active-minutes 2 --json 2>/dev/null
[CLI] Failed to get sessions: Command failed: openclaw sessions list --active-minutes 2 --json 2>/dev/null
[CLI] Failed to get sessions: Command failed: openclaw sessions list --active-minutes 2 --json 2>/dev/null
[CLI] Failed to get sessions: Command failed: openclaw sessions list --active-minutes 2 --json 2>/dev/null
[CLI] Failed to get sessions: Command failed: openclaw sessions list --active-minutes 2 --json 2>/dev/null
[CLI] Failed to get sessions: Command failed: openclaw sessions list --active-minutes 2 --json 2>/dev/null
[CLI] Failed to get sessions: Command failed: openclaw sessions list --active-minutes 2 --json 2>/dev/null
[CLI] Failed to get sessions: Command failed: openclaw sessions list --active-minutes 2 --json 2>/dev/null
[CLI] Failed to get sessions: Command failed: openclaw sessions list --active-minutes 2 --json 2>/dev/null
[CLI] Failed to get sessions: Command failed: openclaw sessions list --active-minutes 2 --json 2>/dev/null
[CLI] Failed to get sessions: Command failed: openclaw sessions list --active-minutes 2 --json 2>/dev/null
Server error: Error: listen EADDRINUSE: address already in use 0.0.0.0:8080
    at Server.setupListenHandle [as _listen2] (node:net:1940:16)
    at listenInCluster (node:net:1997:12)
    at node:net:2206:7
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21) {
  code: 'EADDRINUSE',
  errno: -48,
  syscall: 'listen',
  address: '0.0.0.0',
  port: 8080
}
Server error: Error: listen EADDRINUSE: address already in use 0.0.0.0:8080
    at Server.setupListenHandle [as _listen2] (node:net:1940:16)
    at listenInCluster (node:net:1997:12)
    at node:net:2206:7
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21) {
  code: 'EADDRINUSE',
  errno: -48,
  syscall: 'listen',
  address: '0.0.0.0',
  port: 8080
}
Server error: Error: listen EADDRINUSE: address already in use 0.0.0.0:8080
    at Server.setupListenHandle [as _listen2] (node:net:1940:16)
    at listenInCluster (node:net:1997:12)
    at node:net:2206:7
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21) {
  code: 'EADDRINUSE',
  errno: -48,
  syscall: 'listen',
  address: '0.0.0.0',
  port: 8080
}
/Users/flint/.openclaw/workspace/spy-facility/server.js:362
        const computedStatus = meetingActive ? 'meeting' : (isActive ? 'working' : 'idle');
                               ^

ReferenceError: meetingActive is not defined
    at Server.<anonymous> (/Users/flint/.openclaw/workspace/spy-facility/server.js:362:32)
    at Server.emit (node:events:519:28)
    at parserOnIncoming (node:_http_server:1186:12)
    at HTTPParser.parserOnHeadersComplete (node:_http_common:122:17)

Node.js v22.22.0
/Users/flint/.openclaw/workspace/spy-facility/server.js:362
        const computedStatus = meetingActive ? 'meeting' : (isActive ? 'working' : 'idle');
                               ^

ReferenceError: meetingActive is not defined
    at Server.<anonymous> (/Users/flint/.openclaw/workspace/spy-facility/server.js:362:32)
    at Server.emit (node:events:519:28)
    at parserOnIncoming (node:_http_server:1186:12)
    at HTTPParser.parserOnHeadersComplete (node:_http_common:122:17)

Node.js v22.22.0
/Users/flint/.openclaw/workspace/spy-facility/server.js:362
        const computedStatus = meetingActive ? 'meeting' : (isActive ? 'working' : 'idle');
                               ^

ReferenceError: meetingActive is not defined
    at Server.<anonymous> (/Users/flint/.openclaw/workspace/spy-facility/server.js:362:32)
    at Server.emit (node:events:519:28)
    at parserOnIncoming (node:_http_server:1186:12)
    at HTTPParser.parserOnHeadersComplete (node:_http_common:122:17)

Node.js v22.22.0
/Users/flint/.openclaw/workspace/spy-facility/server.js:362
        const computedStatus = meetingActive ? 'meeting' : (isActive ? 'working' : 'idle');
                               ^

ReferenceError: meetingActive is not defined
    at Server.<anonymous> (/Users/flint/.openclaw/workspace/spy-facility/server.js:362:32)
    at Server.emit (node:events:519:28)
    at parserOnIncoming (node:_http_server:1186:12)
    at HTTPParser.parserOnHeadersComplete (node:_http_common:122:17)

Node.js v22.22.0
/Users/flint/.openclaw/workspace/spy-facility/server.js:362
        const computedStatus = meetingActive ? 'meeting' : (isActive ? 'working' : 'idle');
                               ^

ReferenceError: meetingActive is not defined
    at Server.<anonymous> (/Users/flint/.openclaw/workspace/spy-facility/server.js:362:32)
    at Server.emit (node:events:519:28)
    at parserOnIncoming (node:_http_server:1186:12)
    at HTTPParser.parserOnHeadersComplete (node:_http_common:122:17)

Node.js v22.22.0
[CLI] command failed: Command failed: /opt/homebrew/bin/openclaw sessions list --active-minutes 2 --json 2>/dev/null
[CLI] command failed: Command failed: /opt/homebrew/bin/openclaw sessions list --active-minutes 2 --json 2>/dev/null
[CLI] command failed: Command failed: /opt/homebrew/bin/openclaw sessions list --active-minutes 2 --json 2>/dev/null
/Users/flint/.openclaw/workspace/spy-facility/server.js:459
    }
    ^

SyntaxError: Missing catch or finally after try
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Module._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.22.0
/Users/flint/.openclaw/workspace/spy-facility/server.js:459
    }
    ^

SyntaxError: Missing catch or finally after try
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Module._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.22.0
/Users/flint/.openclaw/workspace/spy-facility/server.js:459
    }
    ^

SyntaxError: Missing catch or finally after try
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Module._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.22.0
/Users/flint/.openclaw/workspace/spy-facility/server.js:459
    }
    ^

SyntaxError: Missing catch or finally after try
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Module._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.22.0
/Users/flint/.openclaw/workspace/spy-facility/server.js:459
    }
    ^

SyntaxError: Missing catch or finally after try
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Module._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.22.0
